# peregrine

./: .gitignore  .hscolour  Benefits.md  LICENSE  README.md  build  default.nix  machine.cabal  package.yaml  peregrine.cabal  shell  shell.nix  stack.yaml
app/: Main.hs
src/: LanguageCExperiment.hs  Main.hs  Protocol.hs  Utils.hs
src/Language/: Peregrine.hs  Utils.hs
src/Language/C/: Lib.hs  Utils.hs
src/Language/Peregrine/: AST.hs  Compiler.hs  DSL.hs  Run.hs
src/Protocol/Backend/C/: Base.hs
src/Protocol/Nasdaq/ITCH/: Proto.hs
src/Protocol/Nasdaq/ITCH/Proto/: C.hs
src/Protocol/Tmx/: TAQ.hs
src/Protocol/Tmx/TAQ/: C.hs
