name:                machine
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/machine#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable language-c-experiment
  hs-source-dirs:      src
  main-is:             LanguageCExperiment.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , language-c-quote
                     , mainland-pretty
                     , interpolatedstring-perl6
                     , neat-interpolation

executable machine
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:
    -fwarn-incomplete-patterns
    -fwarn-missing-fields
  default-language:    Haskell2010
  other-modules:       Language.C.Utils
                     , Language.C.Lib
                     , Protocol
                     , Protocol.Backend.C.Base
                     , Protocol.Tmx.TAQ
                     , Protocol.Tmx.TAQ.C
                     , Protocol.Nasdaq.ITCH.Proto
                     , Protocol.Nasdaq.ITCH.Proto.C
                     , Language.Utils
                     , Utils

  build-depends:       base >= 4.7 && < 5
                     , containers

                     , mtl
                     , data-fix

                     , language-c-quote
                     , mainland-pretty
                     , interpolatedstring-perl6
                     , neat-interpolation
                     , here
                     , string-conversions
                     , text
                     , srcloc

                     , lens

                     , process
                     , directory
                     , shake
