name:                machine
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/machine#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable machine
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:
    -fwarn-incomplete-patterns
    -fwarn-incomplete-uni-patterns
    -fwarn-missing-fields
    -freverse-errors
    -threaded
    -- with-rtsopts +N sets numCapabilities to 1. so wrong.
  default-language:    Haskell2010
  other-modules:       Utils

                     , Language.Utils

                     , Language.C.Utils
                     , Language.C.Lib

                     , Protocol
                     , Protocol.Backend.C.Base
                     , Protocol.Tmx.TAQ
                     , Protocol.Tmx.TAQ.C
                     , Protocol.Nasdaq.ITCH.Proto
                     , Protocol.Nasdaq.ITCH.Proto.C

                     , Language.Peregrine
                     , Language.Peregrine.AST
                     , Language.Peregrine.DSL
                     , Language.Peregrine.Run
                     , Language.Peregrine.Compiler

  build-depends:       base >= 4.7 && < 5
                     , containers
                     , map-exts

                     , mtl
                     , data-fix

                     , mainland-pretty
                     , interpolatedstring-perl6
                     , neat-interpolation
                     , interpolate
                     , string-conversions
                     , text
                     , bytestring
                     , srcloc

                     , lens

                     , typed-process
                     , stm
                     , conduit
                     , time
                     , directory
                     , shake
                     , async
